2011-05-12  Murray Cumming  <murrayc@murrayc.com>

	Fix compiler warnings.

	* glom/mode_data/db_adddel/db_adddel.cc:
	* glom/mode_design/layout/dialog_layout_details.cc:
	* glom/report_builder.cc:
	* glom/utility_widgets/eggspreadtable/eggspreadtablednd.c
	(get_index_at_position):
	* tests/test_parsing_time.cc: Remove unused variables noticed by g++ 4.6.

2011-05-12  Murray Cumming  <murrayc@murrayc.com>

	Require latest libepc.

	Because it uses avahi-ui-gtk3, which uses GTK+3.
	Otherwise we would be indirectl using both GTK+ 2 and GTK+ 3.

2011-04-19  Murray Cumming  <murrayc@murrayc.com>

	Egg::SpreadTable: Add a test.

	* Makefile_tests.am:
	* glom/utility_widgets/eggspreadtablemm/test_preadtablemm.[h|cc]:
	Add a test based on the C test. It seems to work fine.

2011-04-19  Murray Cumming  <murrayc@murrayc.com>

	Egg::SpreadTable: Derive from (and implement) Orientable.

	* glom/utility_widgets/eggspreadtablemm/eggspreadtablemm.[h|cc]:
	Use Orientable.

2011-04-18  Murray Cumming  <murrayc@murrayc.com>

	Fix the make check build.

	* Makefile_glom.am: Create a variable for the eggspreadtable file list.
	* Makefile_tests.am: Use that variable here, so we link against the new
	files.

2011-04-18  Murray Cumming  <murrayc@murrayc.com>

	EggSpreadTableDnd: Wrap the wiget_drop_possible signal.

	* glom/utility_widgets/eggspreadtablemm/eggspreadtabledndmm.[h|cc]:
	* glom/utility_widgets/eggspreadtablemm/private/eggspreadtabledndmm
	_p.h: This is unpleasant without gmmproc.

2011-04-18  Murray Cumming  <murrayc@murrayc.com>

	Egg::SpreadTableDnd: Fix typos.

    * glom/utility_widgets/eggspreadtablemm/eggspreadtabledndmm.cc:
    Use the correct GTypes.

2011-04-18  Murray Cumming  <murrayc@murrayc.com>

	Use EggSpreadTableDnd.

	* glom/utility_widgets/eggspreadtable/eggmarshalers.[h|c}
	* glom/utility_widgets/eggspreadtable/eggplaceholder.[h|c]
	* glom/utility_widgets/eggspreadtable/eggspreadtablednd.[h|c]:
  Added these files, copied from libegg.