@@ -25,7 +25,7 @@ namespace Glom
 {
 
 DbAddDel_WithButtons::DbAddDel_WithButtons()
-: m_ButtonBox(Gtk::BUTTONBOX_END),
+: m_ButtonBox(Gtk::ORIENTATION_HORIZONTAL),
 #ifndef GLOM_ENABLE_MAEMO
   m_Button_Del(Gtk::Stock::DELETE),
   m_Button_Edit(Gtk::Stock::OPEN),
@@ -34,17 +34,18 @@ DbAddDel_WithButtons::DbAddDel_WithButtons()
   m_Button_Add(Gtk::Hildon::SIZE_FINGER_HEIGHT, Hildon::BUTTON_ARRANGEMENT_HORIZONTAL)
 #endif
 {
+  m_ButtonBox.set_layout(Gtk::BUTTONBOX_END);
   m_ButtonBox.set_spacing(Utils::DEFAULT_SPACING_SMALL);
 
   setup_buttons();
   pack_start(m_ButtonBox, Gtk::PACK_SHRINK);
 
   //Link buttons to handlers:
-    
+
   #ifndef GLOM_ENABLE_MAEMO
   m_Button_Add.signal_clicked().connect(sigc::mem_fun(*this, &DbAddDel_WithButtons::on_button_add));
   m_ButtonBox.pack_end(m_Button_Add, Gtk::PACK_SHRINK);
- 
+
   m_Button_Del.signal_clicked().connect(sigc::mem_fun(*this, &DbAddDel_WithButtons::on_button_del));
   m_Button_Edit.signal_clicked().connect(sigc::mem_fun(*this, &DbAddDel_WithButtons::on_button_edit));
 
@@ -57,8 +58,8 @@ DbAddDel_WithButtons::DbAddDel_WithButtons()
   #ifdef GLOM_ENABLE_MAEMO
   //Use smaller icon-only buttons for these infrequently-clicked buttons,
   //to save screen space.
-  
-  //Note that icons of size Gtk::ICON_SIZE_MENU are smaller, 
+
+  //Note that icons of size Gtk::ICON_SIZE_MENU are smaller,
   //but it seems impossible to have Hildon::Buttons smaller than Gtk::Hildon::SIZE_FINGER_HEIGHT.
   Gtk::Image* image = Gtk::manage(new Gtk::Image(Gtk::Stock::ADD, Gtk::ICON_SIZE_SMALL_TOOLBAR));
   m_Button_Add.set_image(*image);
@@ -117,22 +118,22 @@ void DbAddDel_WithButtons::setup_buttons()
   const bool allow_edit = get_allow_user_actions() && get_allow_view_details();
   const bool allow_del = get_allow_user_actions() && m_allow_delete;
   const bool allow_add = get_allow_user_actions() && m_allow_add;
- 
+
   m_Button_Add.show();
   m_Button_Add.set_property("visible", allow_add);
- 
-   
+
+
   #ifndef GLOM_ENABLE_MAEMO
   m_Button_Edit.show();
   m_Button_Edit.set_property("visible", allow_edit);
-  
+
   if(!m_open_button_title.empty())
     m_Button_Edit.set_label(m_open_button_title);
- 
+
   m_Button_Del.show();
   m_Button_Del.set_property("visible", allow_del);
   #endif //GLOM_ENABLE_MAEMO
-  
+
   m_ButtonBox.show();
 }
 
@@ -143,7 +144,7 @@ void DbAddDel_WithButtons::show_all_vfunc()
 {
   //Call the base class:
   Gtk::VBox::show_all_vfunc();
-  
+
   //Hide some stuff:
   setup_buttons();
 }
@@ -151,7 +152,7 @@ void DbAddDel_WithButtons::show_all_vfunc()
 void DbAddDel_WithButtons::set_allow_view_details(bool val)
 {
   DbAddDel::set_allow_view_details(val);
-  
+
   setup_buttons();
 }
 
