@@ -35,7 +35,7 @@ Dialog_Formatting::Dialog_Formatting()
   //Get the formatting stuff:
   Utils::get_glade_widget_derived_with_warning(m_box_formatting);
 
-  get_vbox()->pack_start(*m_box_formatting, Gtk::PACK_EXPAND_WIDGET);
+  get_content_area()->pack_start(*m_box_formatting, Gtk::PACK_EXPAND_WIDGET);
   add_view(m_box_formatting);
 
   add_button(Gtk::Stock::CANCEL, Gtk::RESPONSE_CANCEL);
